# subprojecttoctree-example-master

./: setup.cfg
docs/: conf.py  index.rst
