
[metadata]
name = example-master-project
url = https://subprojecttoctree-example-master.readthedocs.io/
description = "A minimal python project to demonstrate the sphinx-subprojecttoctree extension for Sphinx."

[options]
python_requires = >=3.8.1

[options.extras_require]
docs =
    sphinx~=4.4.0
    sphinx-subprojecttoctree @ git+https://github.com/DriesSchaumont/sphinx-subprojecttoctree
    sphinx_rtd_theme~=1.0.0

